--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,10 @@
     "require": {
         "yepsua/smartwig-bundle":"1.1.0"
     },
+	"suggest": {
+        "yepsua/generator-bundle": "1.1.0",
+		"yepsua/menu-bundle": "1.0.0",
+    }
     "autoload": {
         "psr-0": { "Yepsua\\ThemeBundle": "" }
     },
