--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
 	"suggest": {
         "yepsua/generator-bundle": "1.1.0",
-		"yepsua/menu-bundle": "1.0.0",
+		"yepsua/menu-bundle": "1.0.0"
     }
     "autoload": {
         "psr-0": { "Yepsua\\ThemeBundle": "" }
