--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         "yepsua/smartwig-bundle": "1.2.x-dev"
     },
 	"suggest": {
-		"yepsua/generator-bundle": "1.1.0",
-		"yepsua/menu-bundle": "1.0.0"
+		"yepsua/generator-bundle": "2.0.x",
+		"yepsua/menu-bundle": "1.2.x"
     },
     "autoload": {
         "psr-0": { "Yepsua\\ThemeBundle": "" }
