--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
         }
     ],
     "require": {
-        "yepsua/smartwig-bundle": "1.2.x-dev"
+        "yepsua/smartwig-bundle": "1.3.x-dev"
     },
 	"suggest": {
-		"yepsua/generator-bundle": "1.1.0",
-		"yepsua/menu-bundle": "1.0.0"
+		"yepsua/generator-bundle": "2.0.x",
+		"yepsua/menu-bundle": "1.2.x"
     },
     "autoload": {
         "psr-0": { "Yepsua\\ThemeBundle": "" }
